@@ -1337,8 +1337,11 @@ static void IfPush(void)
     if (*contextp==LBRACE ||
 	*contextp=='['    ||
 	*contextp=='('    ||
-	*contextp == 'i')
-	    *++contextp = 'i';
+	*contextp == 'i') {
+	if(contextp - contextstack >=50) error("contextstack overflow");
+	*++contextp = 'i';
+    }
+    
 }
 
 static void ifpop(void)
@@ -2214,20 +2217,24 @@ int yylex(void)
 	/* Handle brackets, braces and parentheses */
 
     case LBB:
+	if(contextp - contextstack >=49) error("contextstack overflow");
 	*++contextp = '[';
 	*++contextp = '[';
 	break;
 
     case '[':
+	if(contextp - contextstack >=50) error("contextstack overflow");
 	*++contextp = tok;
 	break;
 
     case LBRACE:
+	if(contextp - contextstack >=50) error("contextstack overflow");
 	*++contextp = tok;
 	EatLines = 1;
 	break;
 
     case '(':
+	if(contextp - contextstack >=50) error("contextstack overflow");
 	*++contextp = tok;
 	break;
 
